@@ -5,6 +5,12 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Feb-15 UPDATE Igor Plyatov <plyatov@mail.ru>
+================================================================================
++eeschema
+    Added item "Delete" in "Edit" menu.
+    Added menu "Place" with all possible elements from the right toolbar.
+
 2008-Feb-13 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 +pcbnew
